--- a/src/main/java/webapp/WEB-INF/pages/new-legal-customer.html
+++ b/src/main/java/webapp/WEB-INF/pages/new-legal-customer.html
@@ -3,21 +3,21 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    <link rel="stylesheet" type="text/css" href="csspages/form1.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="csspages/form-style.css" media="screen" />
 </head>
 <body>
-<form name="new customer" action= >
+<form name="new customer" action=NewLegalCustomer class="myForm">
     <fieldset>
         <legend> new customer</legend>
-        corporation name:  <input type="text" name="first_name" />
+        company name:  <input type="text" name="company_name" />
         <br><br>
-        economic code:  <input type="text" name="econimic code" />
+        economic code:  <input type="text" name="economic_code" />
         <br><br>
-        date: <input type="date" name="date" min="2000-01-02"><br>
+        date: <br><input type="date" name="date" min="2000-01-01"><br>
 
         <br>
         <br>
-        <input type="submit" value="Submitlegal">
+        <input type="submit" value="Submit"class="myButton">
     </fieldset>
 </form>
 
