--- a/exploded/WEB-INF/classes/webapp/WEB-INF/pages/new-real-customer.html
+++ b/exploded/WEB-INF/classes/webapp/WEB-INF/pages/new-real-customer.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" type="text/css" href="csspages/form-style.css" media="screen" />
 </head>
 <body>
-<form name="4 customer" action= >
+<form name="new customer" action=NewRealCustomer class="myForm">
     <fieldset>
-        <legend> Search REAL customer</legend>
+        <legend> new customer</legend>
         First name:  <input type="text" name="first_name" />
         <br><br>
         Last name:  <input type="text" name="last_name" />
@@ -17,11 +17,11 @@
         <br><br>
         National code:  <input type="text" name="national_code" />
         <br><br>
-        Birth date: <input type="date" name="birthdait" min="2000-01-02"><br>
+        Birth date: <input type="date" name="birthdate" min="2000-01-02"><br>
 
         <br>
         <br>
-        <input type="SEARCH" value="Submitreal">
+        <input type="submit" value="Submit" class="myButton">
     </fieldset>
 </form>
 
