--- a/src/main/java/webapp/WEB-INF/pages/first-page.html
+++ b/src/main/java/webapp/WEB-INF/pages/first-page.html
@@ -3,13 +3,15 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    <link rel="stylesheet" type="text/css" href="csspages/form-style.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="csspages/form-style.css" media="screen"  />
+
 </head>
 <body>
 
-    <form name="input value" action= "FirstPageManager" METHOD="get">
-        <fieldset>
+    <form name="input value" action= "FirstPageManager" METHOD="get" class="myForm">
 
+        <fieldset>
+            <legend>*** FIRST PAGE ***</legend>
         <input type="radio" name="type" value="real customer" checked>
 Real Customer
         <br>
@@ -17,9 +19,10 @@ Real Customer
 Legal Customer
         <br>
         <br>
-        <input type="submit" value="Submit" >
+        <input type="submit" value="Submit" class="myButton">
         </fieldset>
     </form>
 
 </body>
+
 </html>
