--- a/src/main/java/webapp/WEB-INF/pages/new-real-customer.html
+++ b/src/main/java/webapp/WEB-INF/pages/new-real-customer.html
@@ -3,25 +3,25 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    <link rel="stylesheet" type="text/css" href="csspages/form1.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="csspages/form-style.css" media="screen" />
 </head>
 <body>
-<form name="new customer" action= >
+<form name="new customer" action=NewRealCustomer class="myForm">
     <fieldset>
-        <legend> new customer</legend>
+        <legend> ***new customer***</legend>
         First name:  <input type="text" name="first_name" />
         <br><br>
         Last name:  <input type="text" name="last_name" />
         <br><br>
         Father name:  <input type="text" name="father_name" />
         <br><br>
-        National code:  <input type="text" name="national code" />
+        National code:  <input type="text" name="national_code" />
         <br><br>
-        Birth date: <input type="date" name="bday" min="2000-01-02"><br>
+        Birth date: <input type="date" name="birthdate" min="2000-01-02"><br>
 
         <br>
         <br>
-        <input type="submit" value="Submitreal">
+        <input type="submit" value="Submit" class="myButton">
     </fieldset>
 </form>
 
