--- a/src/main/java/webapp/WEB-INF/pages/real-customer-manager.html
+++ b/src/main/java/webapp/WEB-INF/pages/real-customer-manager.html
@@ -3,13 +3,16 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    <link rel="stylesheet" type="text/css" href="csspages/form1.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="csspages/form-style.css" media="screen" />
 </head>
 <body>
 
-<form name="function type" action= CustomerType>
-    <fieldset>
+<form name="Real Customer manager" action= RealCustomerManager class="myForm" >
 
+
+    <br>
+    <fieldset>
+        <legend>***REAL CUSTOMER***</legend>
         <input type="radio" name="function" value="new_customer" checked>
         new Customer
         <br>
@@ -17,7 +20,7 @@
         search Customer
         <br>
         <br>
-        <input type="submit" value="Submit_function">
+        <input type="submit" value="Submit" class="myButton">
     </fieldset>
 </form>
 
