--- a/src/main/java/webapp/WEB-INF/pages/search-real-customer.html
+++ b/src/main/java/webapp/WEB-INF/pages/search-real-customer.html
@@ -3,25 +3,23 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    <link rel="stylesheet" type="text/css" href="csspages/form-style.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="csspages/form-style.css" media="screen" class="myForm"/>
 </head>
 <body>
-<form name="4 customer" action= >
+<form name="search customer" action= >
     <fieldset>
-        <legend> Search REAL customer</legend>
-        First name:  <input type="text" name="first_name" />
+        <legend>***Search REAL Customer***</legend>
+        First Name:  <input type="text" name="first_name" />
         <br><br>
-        Last name:  <input type="text" name="last_name" />
+        Last Name:  <input type="text" name="last_name" />
         <br><br>
-        Father name:  <input type="text" name="father_name" />
+        Customer Id:  <input type="text" name="customer_id" />
         <br><br>
-        National code:  <input type="text" name="national_code" />
-        <br><br>
-        Birth date: <input type="date" name="birthdait" min="2000-01-02"><br>
-
+        National Code:  <input type="text" name="national_code"/>
         <br>
         <br>
-        <input type="SEARCH" value="Submitreal">
+        <br>
+        <input type="submit" value="Submit" class="myButton">
     </fieldset>
 </form>
 
